# recalldev

./: .coverage  .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  gitignore  main.py  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: on_push.yml
.windsurf/rules/: recalldevrules.md
constants/: callback_data.py  messages.py  prompts.py
docs/: architecture_en.md  architecture_ru.md  bot_flow_en.md  bot_flow_ru.md
scripts/: create_db.py  drop_db.py
src/: main.py  utils.py
src/bot/: callbacks.py  flow_result.py  handlers.py  state_machine.py  urls.py
src/bot/flows/: diagnostics.py  practice.py
src/db/: db.py  models.py  services.py
src/settings/: config.py  settings.py
telegram_rest_mvc/: README.md  __init__.py  pyproject.toml  registrar.py  router.py  views.py
telegram_rest_mvc/settings/: config.py
tests/: conftest.py  test_db.py  test_diagnostics_flow.py  test_flows.py  test_practice_flow.py  test_services.py  test_state_machine.py  test_views.py
tests/db/: test_db_exceptions.py  test_db_session.py  test_init_db.py
tests/flows/: test_diagnostics_edgecases.py  test_diagnostics_start.py  test_practice_edgecases.py  test_practice_llm_error.py
tests/services/: test_learning_plan_flow.py  test_question_uniqueness.py  test_services_core.py  test_services_full_coverage.py  test_services_getters.py  test_services_misc.py  test_services_plan_order.py  test_services_population.py
tests/views/: test_diagnostics_view.py  test_practice_view.py  test_practice_view_edge.py  test_state_machine_utils.py
(+5 files in other folders)
